# infinite-docs

./: 404.html  CNAME  LICENSE  README.md  function-template.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-release.yml
css/: base.css
docs/: getting_started.md  index.md
docs/examples/: cube.md
docs/reference/enums/: FiniteDirectionType.md  FiniteKey.md  FiniteShaderType.md
docs/reference/functions/audio/: finite_audio_cleanup.md  finite_audio_device_init.md  finite_audio_get_audio_duration.md  finite_audio_get_audio_params.md  finite_audio_init_audio.md  finite_audio_pause.md  finite_audio_play.md  finite_audio_stop.md  finite_audio_unpause.md
docs/reference/functions/draw/: finite_draw_cleanup.md  finite_draw_create_snapshot.md  finite_draw_finish.md  finite_draw_get_font_extents.md  finite_draw_get_text_extents.md  finite_draw_load_snapshot.md  finite_draw_pattern_linear.md  finite_draw_png.md  finite_draw_rect.md  finite_draw_rounded_rect.md  finite_draw_set_draw_position.md  finite_draw_set_font.md  finite_shell_init.md  (+8 more)
docs/reference/types/: FiniteBtn.md  FiniteBtnRelationShips.md  FiniteKeyState.md  FiniteKeyboard.md  FinitePlaybackDevice.md  FinitePlaybackDuration.md  FiniteRender.md  FiniteRenderAttachmentDescriptionInfo.md  FiniteRenderAttachmentRefInfo.md  FiniteRenderQueueFamily.md  FiniteRenderSubpassDescriptionInfo.md  FiniteShell.md  FiniteTextGroup.md  FiniteWindowInfo.md
examples/audio/: index.html
examples/cube/: index.html
examples/draw/: index.html
examples/render/: index.html
getting_started/: index.html
mkdocs_bootswatch/infinite/: base.html  mkdocs_theme.yml  search-modal.html
mkdocs_bootswatch/infinite/css/: bootstrap.min.css
reference/enums/FiniteDirectionType/: index.html
reference/enums/FiniteKey/: index.html
reference/enums/FiniteShaderType/: index.html
reference/functions/render/: index.html
reference/types/FiniteBtn/: index.html
reference/types/FiniteBtnRelationShips/: index.html
reference/types/FiniteKeyState/: index.html
reference/types/FiniteKeyboard/: index.html
reference/types/FinitePlaybackDevice/: index.html
reference/types/FinitePlaybackDuration/: index.html
reference/types/FiniteShell/: index.html
reference/types/FiniteTextGroup/: index.html
reference/types/FiniteWindowInfo/: index.html
search/: search_index.json
starter-files/: meson.build
(+93 files in other folders)
