[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = 'mkdocs-bootswatch-finite'
dynamic = ['version']
description = "Infinite Bootswatch theme for MkDocs"
readme = {file = 'README.md', content-type='text/markdown'}
authors = [
    {name = 'Dougal Matthews', email = 'dougal@dougalmatthews.com'}
]
maintainers = [
    {name = 'Waylan Limberg', email = 'waylan.limberg@icloud.com'},
    {name = 'Gabriel Thompson', email = 'gabriel.thomp@cubixdev.org'}
]
license = {file = 'LICENSE'}
requires-python = '>=3.5'
dependencies = [
    'mkdocs>=1.1'
]
s
[project.urls]
'Homepage' = 'https://docs.cubixdev.org'
'Repository' = 'https://github.com/Cubix-Dev/infinite-docs'
'Issue Tracker' = 'https://github.com/Cubix-Dev/infinite-docs/issues'

[project.entry-points.'mkdocs.themes']
infinite = 'mkdocs_bootswatch.infinite'

[tool.setuptools]
license-files = ['LICENSE', 'bootswatch.LICENSE']

[tool.setuptools.package-data]
"*" = ['*.css', '*.yml']

[tool.setuptools.dynamic]
version = {attr = 'mkdocs_bootswatch.__version__'}
